# duckdb-filesystem-observability

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  PER_CONNECTION_METRICS.md  README.md  extension_config.cmake  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: MainDistributionPipeline.yml
.skills/duckdb-extension-upgrade/: SKILL.md
docs/: README.md
integration/: tcp_connection_fetcher_test.cpp
scripts/: bootstrap-template.py
src/: external_file_cache_query_function.cpp  external_file_cache_stats_recorder.cpp  fake_filesystem.cpp  filesystem_ref_registry.cpp  filesystem_status_query_function.cpp  histogram.cpp  io_operation.cpp  metrics_collector.cpp  numeric_utils.cpp  observability_filesystem.cpp  observabilityfs_extension.cpp  observefs_extension.cpp  observefs_extension_callback.cpp  observefs_instance_state.cpp  operation_latency_collector.cpp  operation_latency_histogram.cpp  operation_size_collector.cpp  quack_extension.cpp  quantile.cpp  quantile_estimator.cpp  quantilelite.cpp  string_utils.cpp  tcp_connection_fetcher.cpp  tcp_connection_query_function.cpp  time_utils.cpp
src/include/: external_file_cache_query_function.hpp  external_file_cache_stats_recorder.hpp  fake_filesystem.hpp  filesystem_ref_registry.hpp  filesystem_status_query_function.hpp  histogram.hpp  io_operation.hpp  metrics_collector.hpp  numeric_utils.hpp  observability_filesystem.hpp  observabilityfs_extension.hpp  observefs_extension.hpp  observefs_extension_callback.hpp  observefs_instance_state.hpp  operation_latency_collector.hpp  operation_latency_histogram.hpp  operation_size_collector.hpp  quantile.hpp  quantile_estimator.hpp  quantilelite.hpp  string_utils.hpp  syscall_macros.hpp  tcp_connection_fetcher.hpp  tcp_connection_query_function.hpp  thread_annotation.hpp  time_utils.hpp
test/: extension.test
test/sql/: attach_db.test  basic.test  disable_external_access.test  extension.test  external_file_cache_access_record.test  no_interested_io.test  tcp_connection_status.test  wrap_cache_filesystem.test  wrap_filesystem.test
test/unittest/: CMakeLists.txt  test_filesystem_glob.cpp  test_histogram.cpp  test_no_destructor.cpp  test_quantile_estimator.cpp  test_string_utils.cpp
unit/: test_connection_cleanup.cpp  test_no_destructor.cpp  test_quantile_estimator.cpp  test_string_utils.cpp
